--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^9.0.3",
     "react-router-dom": "^6.18.0",
+    "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
